--- a/notebooks/02_Task1_Sentiment_Labeling.ipynb
+++ b/notebooks/02_Task1_Sentiment_Labeling.ipynb
@@ -44,6 +44,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60768db9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "# Download VADER lexicon if not already downloaded\n",
+    "try:\n",
+    "    nltk.data.find('vader_lexicon')\n",
+    "except LookupError:\n",
+    "    nltk.download('vader_lexicon')\n",
+    "\n",
+    "# Initialize VADER analyzer\n",
+    "vader_analyzer = SentimentIntensityAnalyzer()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0728134a",
    "metadata": {},
@@ -91,21 +111,69 @@
     "    else:\n",
     "        return 'Neutral'\n",
     "\n",
-    "def get_polarity_score(text):\n",
-    "    \"\"\"Get polarity score\"\"\"\n",
+    "def get_sentiment_vader(text):\n",
+    "    \"\"\"Get sentiment using VADER\"\"\"\n",
+    "    scores = vader_analyzer.polarity_scores(str(text))\n",
+    "    compound = scores['compound']\n",
+    "    \n",
+    "    if compound >= 0.05:\n",
+    "        return 'Positive'\n",
+    "    elif compound <= -0.05:\n",
+    "        return 'Negative'\n",
+    "    else:\n",
+    "        return 'Neutral'\n",
+    "\n",
+    "def get_combined_sentiment(text):\n",
+    "    \"\"\"Combine TextBlob and VADER for more robust sentiment classification\"\"\"\n",
+    "    textblob_sentiment = get_sentiment_textblob(text)\n",
+    "    vader_sentiment = get_sentiment_vader(text)\n",
+    "    \n",
+    "    # If both agree, use their result\n",
+    "    if textblob_sentiment == vader_sentiment:\n",
+    "        return textblob_sentiment\n",
+    "    \n",
+    "    # If they disagree, use VADER (generally more robust for social media/informal text)\n",
+    "    # But if one is neutral and other is not, use the non-neutral\n",
+    "    if textblob_sentiment == 'Neutral':\n",
+    "        return vader_sentiment\n",
+    "    elif vader_sentiment == 'Neutral':\n",
+    "        return textblob_sentiment\n",
+    "    else:\n",
+    "        # Both are non-neutral but different, use VADER\n",
+    "        return vader_sentiment\n",
+    "\n",
+    "def get_polarity_scores(text):\n",
+    "    \"\"\"Get detailed polarity scores\"\"\"\n",
     "    blob = TextBlob(str(text))\n",
-    "    return blob.sentiment.polarity\n",
+    "    vader_scores = vader_analyzer.polarity_scores(str(text))\n",
+    "    \n",
+    "    return {\n",
+    "        'textblob_polarity': blob.sentiment.polarity,\n",
+    "        'textblob_subjectivity': blob.sentiment.subjectivity,\n",
+    "        'vader_compound': vader_scores['compound'],\n",
+    "        'vader_positive': vader_scores['pos'],\n",
+    "        'vader_negative': vader_scores['neg'],\n",
+    "        'vader_neutral': vader_scores['neu']\n",
+    "    }\n",
     "\n",
-    "# Apply sentiment analysis\n",
+    "# Apply sentiment analysis to the dataset\n",
+    "print(\"Applying sentiment analysis...\")\n",
     "df['sentiment_textblob'] = df['combined_text'].apply(get_sentiment_textblob)\n",
-    "df['polarity_score'] = df['combined_text'].apply(get_polarity_score)\n",
+    "df['sentiment_vader'] = df['combined_text'].apply(get_sentiment_vader)\n",
+    "df['sentiment_final'] = df['combined_text'].apply(get_combined_sentiment)\n",
     "\n",
-    "# Display sentiment distribution\n",
-    "sentiment_counts = df['sentiment_textblob'].value_counts()\n",
-    "print(\"Sentiment Distribution (TextBlob):\")\n",
-    "print(sentiment_counts)\n",
-    "print(f\"\\nPercentages:\")\n",
-    "print(sentiment_counts / len(df) * 100)"
+    "# Get detailed scores for analysis\n",
+    "polarity_scores = df['combined_text'].apply(get_polarity_scores)\n",
+    "polarity_df = pd.json_normalize(polarity_scores)\n",
+    "df = pd.concat([df, polarity_df], axis=1)\n",
+    "\n",
+    "print(\"Sentiment analysis completed!\")\n",
+    "print(f\"\\nSentiment Distribution (TextBlob):\")\n",
+    "print(df['sentiment_textblob'].value_counts())\n",
+    "print(f\"\\nSentiment Distribution (VADER):\")\n",
+    "print(df['sentiment_vader'].value_counts())\n",
+    "print(f\"\\nSentiment Distribution (Combined - FINAL):\")\n",
+    "print(df['sentiment_final'].value_counts())"
    ]
   },
   {
@@ -123,38 +191,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(2, 2, figsize=(15, 10))\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
     "\n",
-    "# Sentiment distribution pie chart\n",
-    "sentiment_counts.plot(kind='pie', ax=axes[0,0], autopct='%1.1f%%', startangle=90)\n",
-    "axes[0,0].set_title('Sentiment Distribution')\n",
+    "# TextBlob sentiment distribution\n",
+    "sentiment_tb = df['sentiment_textblob'].value_counts()\n",
+    "sentiment_tb.plot(kind='pie', ax=axes[0,0], autopct='%1.1f%%', startangle=90)\n",
+    "axes[0,0].set_title('TextBlob Sentiment Distribution')\n",
     "axes[0,0].set_ylabel('')\n",
     "\n",
-    "# Sentiment distribution bar chart\n",
-    "sentiment_counts.plot(kind='bar', ax=axes[0,1], color=['green', 'red', 'gray'])\n",
-    "axes[0,1].set_title('Sentiment Counts')\n",
-    "axes[0,1].set_xlabel('Sentiment')\n",
-    "axes[0,1].set_ylabel('Count')\n",
-    "axes[0,1].tick_params(axis='x', rotation=45)\n",
+    "# VADER sentiment distribution\n",
+    "sentiment_vader = df['sentiment_vader'].value_counts()\n",
+    "sentiment_vader.plot(kind='pie', ax=axes[0,1], autopct='%1.1f%%', startangle=90)\n",
+    "axes[0,1].set_title('VADER Sentiment Distribution')\n",
+    "axes[0,1].set_ylabel('')\n",
     "\n",
-    "# Polarity score distribution\n",
-    "axes[1,0].hist(df['polarity_score'], bins=50, color='skyblue', alpha=0.7)\n",
-    "axes[1,0].set_title('Polarity Score Distribution')\n",
-    "axes[1,0].set_xlabel('Polarity Score')\n",
-    "axes[1,0].set_ylabel('Frequency')\n",
+    "# Final combined sentiment distribution\n",
+    "sentiment_final = df['sentiment_final'].value_counts()\n",
+    "sentiment_final.plot(kind='pie', ax=axes[0,2], autopct='%1.1f%%', startangle=90)\n",
+    "axes[0,2].set_title('Combined Sentiment Distribution (FINAL)')\n",
+    "axes[0,2].set_ylabel('')\n",
+    "\n",
+    "# Comparison bar chart\n",
+    "comparison_data = pd.DataFrame({\n",
+    "    'TextBlob': sentiment_tb,\n",
+    "    'VADER': sentiment_vader,\n",
+    "    'Combined': sentiment_final\n",
+    "}).fillna(0)\n",
+    "\n",
+    "comparison_data.plot(kind='bar', ax=axes[1,0])\n",
+    "axes[1,0].set_title('Sentiment Method Comparison')\n",
+    "axes[1,0].set_xlabel('Sentiment')\n",
+    "axes[1,0].set_ylabel('Count')\n",
+    "axes[1,0].tick_params(axis='x', rotation=45)\n",
+    "\n",
+    "# VADER compound score distribution\n",
+    "axes[1,1].hist(df['vader_compound'], bins=50, color='skyblue', alpha=0.7)\n",
+    "axes[1,1].set_title('VADER Compound Score Distribution')\n",
+    "axes[1,1].set_xlabel('Compound Score')\n",
+    "axes[1,1].set_ylabel('Frequency')\n",
+    "axes[1,1].axvline(x=0.05, color='green', linestyle='--', label='Positive threshold')\n",
+    "axes[1,1].axvline(x=-0.05, color='red', linestyle='--', label='Negative threshold')\n",
+    "axes[1,1].legend()\n",
     "\n",
     "# Sentiment by email domain (top 10)\n",
     "if 'email_domain' in df.columns:\n",
     "    top_domains = df['email_domain'].value_counts().head(10).index\n",
-    "    domain_sentiment = df[df['email_domain'].isin(top_domains)].groupby(['email_domain', 'sentiment_textblob']).size().unstack(fill_value=0)\n",
-    "    domain_sentiment.plot(kind='bar', stacked=True, ax=axes[1,1])\n",
-    "    axes[1,1].set_title('Sentiment by Email Domain (Top 10)')\n",
-    "    axes[1,1].set_xlabel('Email Domain')\n",
-    "    axes[1,1].set_ylabel('Count')\n",
-    "    axes[1,1].tick_params(axis='x', rotation=45)\n",
+    "    domain_sentiment = df[df['email_domain'].isin(top_domains)].groupby(['email_domain', 'sentiment_final']).size().unstack(fill_value=0)\n",
+    "    domain_sentiment.plot(kind='bar', stacked=True, ax=axes[1,2])\n",
+    "    axes[1,2].set_title('Final Sentiment by Email Domain (Top 10)')\n",
+    "    axes[1,2].set_xlabel('Email Domain')\n",
+    "    axes[1,2].set_ylabel('Count')\n",
+    "    axes[1,2].tick_params(axis='x', rotation=45)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig('../visualizations/sentiment_analysis_comparison.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "# Agreement analysis\n",
+    "agreement_analysis = pd.crosstab(df['sentiment_textblob'], df['sentiment_vader'], margins=True)\n",
+    "print(\"\\nAgreement between TextBlob and VADER:\")\n",
+    "print(agreement_analysis)\n",
+    "\n",
+    "# Calculate agreement percentage\n",
+    "total_agreements = (df['sentiment_textblob'] == df['sentiment_vader']).sum()\n",
+    "agreement_percentage = (total_agreements / len(df)) * 100\n",
+    "print(f\"\\nOverall agreement between TextBlob and VADER: {agreement_percentage:.2f}%\")"
    ]
   },
   {
@@ -240,24 +341,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply the logistic regression model to the full dataset\n",
-    "X_full_tfidf = tfidf.transform(df['combined_text'])\n",
-    "df['sentiment_ml'] = lr_model.predict(X_full_tfidf)\n",
-    "df['sentiment_ml_proba'] = lr_model.predict_proba(X_full_tfidf).max(axis=1)\n",
-    "\n",
-    "# Compare TextBlob vs ML results\n",
-    "comparison = pd.crosstab(df['sentiment_textblob'], df['sentiment_ml'], margins=True)\n",
-    "print(\"Sentiment Comparison (TextBlob vs ML):\")\n",
-    "print(comparison)\n",
-    "\n",
     "# Save the dataset with sentiment analysis results\n",
     "df.to_csv('../data/processed/email_data_with_sentiment.csv', index=False)\n",
-    "print(\"\\nDataset with sentiment analysis saved to '../data/processed/email_data_with_sentiment.csv'\")\n",
+    "print(\"Dataset with sentiment analysis saved to '../data/processed/email_data_with_sentiment.csv'\")\n",
     "\n",
-    "# Display sample results\n",
-    "print(\"\\nSample Results:\")\n",
-    "sample_cols = ['Subject', 'sentiment_textblob', 'sentiment_ml', 'polarity_score', 'sentiment_ml_proba']\n",
-    "print(df[sample_cols].head(10))"
+    "# Create summary report\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"TASK 1: SENTIMENT LABELING - SUMMARY REPORT\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "print(f\"\\nDataset Overview:\")\n",
+    "print(f\"- Total messages analyzed: {len(df):,}\")\n",
+    "print(f\"- Unique employees: {df['from'].nunique():,}\")\n",
+    "print(f\"- Date range: {df['date'].min()} to {df['date'].max()}\")\n",
+    "\n",
+    "print(f\"\\nFinal Sentiment Distribution:\")\n",
+    "sentiment_counts = df['sentiment_final'].value_counts()\n",
+    "for sentiment, count in sentiment_counts.items():\n",
+    "    percentage = (count / len(df)) * 100\n",
+    "    print(f\"- {sentiment}: {count:,} messages ({percentage:.1f}%)\")\n",
+    "\n",
+    "print(f\"\\nMethod Comparison:\")\n",
+    "print(f\"- TextBlob-VADER Agreement: {agreement_percentage:.2f}%\")\n",
+    "print(f\"- Combined method used for final labels\")\n",
+    "\n",
+    "print(f\"\\nSample Results:\")\n",
+    "sample_cols = ['Subject', 'sentiment_final', 'vader_compound', 'textblob_polarity']\n",
+    "sample_data = df[sample_cols].head(10)\n",
+    "print(sample_data.to_string(index=False))\n",
+    "\n",
+    "print(f\"\\nOutput Files:\")\n",
+    "print(f\"- Processed dataset: ../data/processed/email_data_with_sentiment.csv\")\n",
+    "print(f\"- Visualization: ../visualizations/sentiment_analysis_comparison.png\")\n",
+    "\n",
+    "print(f\"\\n\" + \"=\"*60)\n",
+    "print(\"Task 1 completed successfully!\")\n",
+    "print(\"Next: Run Task 2 (Exploratory Data Analysis)\")\n",
+    "print(\"=\"*60)"
    ]
   }
  ],
