--- a/notebooks/05_Task4_Employee_Ranking.ipynb
+++ b/notebooks/05_Task4_Employee_Ranking.ipynb
@@ -1,5 +1,89 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "96cbd3a7",
+   "metadata": {},
+   "source": [
+    "# Task 4: Employee Ranking\n",
+    "\n",
+    "This notebook implements **Task 4** of the Employee Sentiment Analysis project. The objective is to generate ranked lists of employees based on their monthly sentiment scores.\n",
+    "\n",
+    "## Ranking Criteria:\n",
+    "- **Top Three Positive Employees**: Highest positive scores each month\n",
+    "- **Top Three Negative Employees**: Lowest (most negative) scores each month\n",
+    "- **Sorting**: First by score (descending/ascending), then alphabetically by email\n",
+    "\n",
+    "## Requirements:\n",
+    "- Generate rankings for each month in the dataset\n",
+    "- Present rankings in clear, organized format\n",
+    "- Document ranking methodology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98e92fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load monthly scores from Task 3\n",
+    "monthly_scores = pd.read_csv('../data/processed/monthly_scores.csv')\n",
+    "\n",
+    "def get_monthly_rankings(monthly_scores_df, year_month):\n",
+    "    \"\"\"Get top 3 positive and negative employees for a specific month\"\"\"\n",
+    "    month_data = monthly_scores_df[monthly_scores_df['year_month'] == year_month].copy()\n",
+    "    \n",
+    "    # Sort for positive ranking (highest scores first, then alphabetical)\n",
+    "    positive_ranking = month_data.sort_values(['monthly_score', 'from'], ascending=[False, True]).head(3)\n",
+    "    \n",
+    "    # Sort for negative ranking (lowest scores first, then alphabetical)  \n",
+    "    negative_ranking = month_data.sort_values(['monthly_score', 'from'], ascending=[True, True]).head(3)\n",
+    "    \n",
+    "    return positive_ranking, negative_ranking\n",
+    "\n",
+    "# Generate rankings for all months\n",
+    "all_months = sorted(monthly_scores['year_month'].unique())\n",
+    "rankings_summary = []\n",
+    "\n",
+    "print(\"=== MONTHLY EMPLOYEE RANKINGS ===\\n\")\n",
+    "\n",
+    "for month in all_months:\n",
+    "    print(f\"📅 {month}\")\n",
+    "    print(\"-\" * 50)\n",
+    "    \n",
+    "    positive_top3, negative_top3 = get_monthly_rankings(monthly_scores, month)\n",
+    "    \n",
+    "    print(\"🏆 TOP 3 POSITIVE EMPLOYEES:\")\n",
+    "    for i, (_, row) in enumerate(positive_top3.iterrows(), 1):\n",
+    "        print(f\"{i}. {row['from']} - Score: {row['monthly_score']} ({row['message_count']} messages)\")\n",
+    "        rankings_summary.append({\n",
+    "            'month': month, 'rank': i, 'type': 'Positive', \n",
+    "            'employee': row['from'], 'score': row['monthly_score'], \n",
+    "            'message_count': row['message_count']\n",
+    "        })\n",
+    "    \n",
+    "    print(\"\\n⚠️ TOP 3 NEGATIVE EMPLOYEES:\")\n",
+    "    for i, (_, row) in enumerate(negative_top3.iterrows(), 1):\n",
+    "        print(f\"{i}. {row['from']} - Score: {row['monthly_score']} ({row['message_count']} messages)\")\n",
+    "        rankings_summary.append({\n",
+    "            'month': month, 'rank': i, 'type': 'Negative',\n",
+    "            'employee': row['from'], 'score': row['monthly_score'],\n",
+    "            'message_count': row['message_count']\n",
+    "        })\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*60 + \"\\n\")\n",
+    "\n",
+    "# Save rankings summary\n",
+    "rankings_df = pd.DataFrame(rankings_summary)\n",
+    "rankings_df.to_csv('../data/processed/employee_rankings.csv', index=False)\n",
+    "print(\"Rankings saved to '../data/processed/employee_rankings.csv'\")"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
