--- a/notebooks/06_Task5_Flight_Risk_Identification.ipynb
+++ b/notebooks/06_Task5_Flight_Risk_Identification.ipynb
@@ -1,5 +1,141 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "bff3a94b",
+   "metadata": {},
+   "source": [
+    "# Task 5: Flight Risk Identification\n",
+    "\n",
+    "This notebook implements **Task 5** of the Employee Sentiment Analysis project. The objective is to identify employees who are at risk of leaving based on their messaging patterns.\n",
+    "\n",
+    "## Flight Risk Definition:\n",
+    "- **Flight Risk**: Any employee who has sent **4 or more negative messages** in any **30-day rolling period**\n",
+    "- **Rolling Window**: 30-day period is calculated as a rolling count, irrespective of month boundaries\n",
+    "- **Criteria**: Based on message count, not cumulative score\n",
+    "\n",
+    "## Requirements:\n",
+    "- Implement 30-day rolling window analysis\n",
+    "- Identify all employees meeting the flight risk criteria\n",
+    "- Provide robust flagging process\n",
+    "- Extract comprehensive list of at-risk employees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e0f394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Load data with sentiment labels\n",
+    "df = pd.read_csv('../data/processed/email_data_with_sentiment.csv')\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "# Filter for negative messages only\n",
+    "negative_messages = df[df['sentiment_final'] == 'Negative'].copy()\n",
+    "negative_messages = negative_messages.sort_values(['from', 'date'])\n",
+    "\n",
+    "print(f\"Total negative messages: {len(negative_messages):,}\")\n",
+    "print(f\"Employees with negative messages: {negative_messages['from'].nunique():,}\")\n",
+    "\n",
+    "def identify_flight_risk_employees(df_negative, window_days=30, threshold=4):\n",
+    "    \"\"\"\n",
+    "    Identify employees with 4+ negative messages in any 30-day rolling window\n",
+    "    \"\"\"\n",
+    "    flight_risk_employees = set()\n",
+    "    flight_risk_details = []\n",
+    "    \n",
+    "    # Group by employee\n",
+    "    for employee in df_negative['from'].unique():\n",
+    "        employee_data = df_negative[df_negative['from'] == employee].copy()\n",
+    "        employee_data = employee_data.sort_values('date')\n",
+    "        \n",
+    "        # Check each message as a potential start of 30-day window\n",
+    "        for i, (idx, row) in enumerate(employee_data.iterrows()):\n",
+    "            start_date = row['date']\n",
+    "            end_date = start_date + timedelta(days=window_days)\n",
+    "            \n",
+    "            # Count negative messages in this 30-day window\n",
+    "            window_messages = employee_data[\n",
+    "                (employee_data['date'] >= start_date) & \n",
+    "                (employee_data['date'] < end_date)\n",
+    "            ]\n",
+    "            \n",
+    "            negative_count = len(window_messages)\n",
+    "            \n",
+    "            if negative_count >= threshold:\n",
+    "                flight_risk_employees.add(employee)\n",
+    "                \n",
+    "                # Store details of this risk period\n",
+    "                flight_risk_details.append({\n",
+    "                    'employee': employee,\n",
+    "                    'risk_period_start': start_date.date(),\n",
+    "                    'risk_period_end': end_date.date(),\n",
+    "                    'negative_message_count': negative_count,\n",
+    "                    'risk_level': 'HIGH' if negative_count >= 6 else 'MEDIUM'\n",
+    "                })\n",
+    "                \n",
+    "                # Skip ahead to avoid overlapping windows for the same employee\n",
+    "                break\n",
+    "    \n",
+    "    return flight_risk_employees, flight_risk_details\n",
+    "\n",
+    "# Identify flight risk employees\n",
+    "flight_risk_set, risk_details = identify_flight_risk_employees(negative_messages)\n",
+    "\n",
+    "print(f\"\\n=== FLIGHT RISK ANALYSIS RESULTS ===\")\n",
+    "print(f\"Employees identified as flight risk: {len(flight_risk_set)}\")\n",
+    "\n",
+    "if flight_risk_set:\n",
+    "    print(f\"\\n⚠️ FLIGHT RISK EMPLOYEES:\")\n",
+    "    flight_risk_df = pd.DataFrame(risk_details)\n",
+    "    \n",
+    "    for i, employee in enumerate(sorted(flight_risk_set), 1):\n",
+    "        employee_risks = flight_risk_df[flight_risk_df['employee'] == employee]\n",
+    "        max_negative_count = employee_risks['negative_message_count'].max()\n",
+    "        risk_level = employee_risks['risk_level'].iloc[0]\n",
+    "        \n",
+    "        print(f\"{i}. {employee}\")\n",
+    "        print(f\"   - Max negative messages in 30 days: {max_negative_count}\")\n",
+    "        print(f\"   - Risk Level: {risk_level}\")\n",
+    "        \n",
+    "        # Show the risk period details\n",
+    "        for _, risk in employee_risks.iterrows():\n",
+    "            print(f\"   - Risk Period: {risk['risk_period_start']} to {risk['risk_period_end']} ({risk['negative_message_count']} negative messages)\")\n",
+    "        print()\n",
+    "\n",
+    "    # Save flight risk analysis\n",
+    "    flight_risk_df.to_csv('../data/processed/flight_risk_employees.csv', index=False)\n",
+    "    \n",
+    "    # Create summary for final report\n",
+    "    flight_risk_summary = {\n",
+    "        'total_flight_risk_employees': len(flight_risk_set),\n",
+    "        'flight_risk_employees': sorted(list(flight_risk_set)),\n",
+    "        'analysis_date': datetime.now().strftime('%Y-%m-%d'),\n",
+    "        'criteria': '4+ negative messages in any 30-day rolling period'\n",
+    "    }\n",
+    "    \n",
+    "    pd.DataFrame([flight_risk_summary]).to_csv('../data/processed/flight_risk_summary.csv', index=False)\n",
+    "    \n",
+    "    print(f\"Flight risk analysis saved to:\")\n",
+    "    print(f\"- '../data/processed/flight_risk_employees.csv'\")\n",
+    "    print(f\"- '../data/processed/flight_risk_summary.csv'\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"✅ No employees identified as flight risk based on current criteria.\")\n",
+    "\n",
+    "print(f\"\\n\" + \"=\"*60)\n",
+    "print(\"Task 5 completed successfully!\")\n",
+    "print(\"Next: Run Task 6 (Predictive Modeling)\")\n",
+    "print(\"=\"*60)"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
