--- a/notebooks/07_Task6_Predictive_Modeling.ipynb
+++ b/notebooks/07_Task6_Predictive_Modeling.ipynb
@@ -1,5 +1,235 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "12b4d245",
+   "metadata": {},
+   "source": [
+    "# Task 6: Predictive Modeling\n",
+    "\n",
+    "This notebook implements **Task 6** of the Employee Sentiment Analysis project. The objective is to develop a linear regression model to analyze sentiment trends and predict sentiment scores.\n",
+    "\n",
+    "## Model Objectives:\n",
+    "- **Analyze sentiment trends** using various independent variables\n",
+    "- **Predict sentiment scores** based on message characteristics\n",
+    "- **Identify significant factors** that influence sentiment\n",
+    "\n",
+    "## Selected Features:\n",
+    "- **Message frequency** (messages per month)\n",
+    "- **Message length** (character count)\n",
+    "- **Average message length**\n",
+    "- **Word count** (total and average)\n",
+    "- **Temporal features** (month, day of week, weekend)\n",
+    "- **Employee domain** (encoded categorically)\n",
+    "\n",
+    "## Requirements:\n",
+    "- Split data into training and testing sets\n",
+    "- Develop and validate linear regression model\n",
+    "- Evaluate using appropriate metrics\n",
+    "- Interpret results and significance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf017e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Load processed data\n",
+    "df = pd.read_csv('../data/processed/email_data_with_sentiment.csv')\n",
+    "monthly_scores = pd.read_csv('../data/processed/monthly_scores.csv')\n",
+    "\n",
+    "print(f\"Dataset loaded: {df.shape}\")\n",
+    "print(f\"Monthly scores loaded: {monthly_scores.shape}\")\n",
+    "\n",
+    "# Feature Engineering for Predictive Modeling\n",
+    "def create_features_for_prediction(df):\n",
+    "    \"\"\"Create features for sentiment prediction\"\"\"\n",
+    "    \n",
+    "    # Convert date to datetime\n",
+    "    df['date'] = pd.to_datetime(df['date'])\n",
+    "    \n",
+    "    # Create monthly aggregated features per employee\n",
+    "    monthly_features = df.groupby(['from', df['date'].dt.to_period('M')]).agg({\n",
+    "        'sentiment_score': 'sum',  # Target variable (monthly score)\n",
+    "        'combined_text_length': ['mean', 'std', 'sum'],\n",
+    "        'subject_word_count': ['mean', 'sum'],\n",
+    "        'body_word_count': ['mean', 'sum'],\n",
+    "        'sentiment_final': 'count',  # Message frequency\n",
+    "        'is_weekend': 'mean',  # Proportion of weekend messages\n",
+    "        'email_domain': 'first'\n",
+    "    }).reset_index()\n",
+    "    \n",
+    "    # Flatten column names\n",
+    "    monthly_features.columns = ['employee', 'year_month', 'monthly_score',\n",
+    "                              'avg_msg_length', 'std_msg_length', 'total_msg_length',\n",
+    "                              'avg_subject_words', 'total_subject_words',\n",
+    "                              'avg_body_words', 'total_body_words',\n",
+    "                              'message_frequency', 'weekend_proportion', 'email_domain']\n",
+    "    \n",
+    "    # Fill NaN values\n",
+    "    monthly_features['std_msg_length'] = monthly_features['std_msg_length'].fillna(0)\n",
+    "    \n",
+    "    # Encode email domain\n",
+    "    le = LabelEncoder()\n",
+    "    monthly_features['domain_encoded'] = le.fit_transform(monthly_features['email_domain'])\n",
+    "    \n",
+    "    # Add temporal features\n",
+    "    monthly_features['month'] = monthly_features['year_month'].dt.month\n",
+    "    monthly_features['year'] = monthly_features['year_month'].dt.year\n",
+    "    \n",
+    "    return monthly_features, le\n",
+    "\n",
+    "# Create features\n",
+    "features_df, domain_encoder = create_features_for_prediction(df)\n",
+    "\n",
+    "print(f\"Features created: {features_df.shape}\")\n",
+    "print(f\"Columns: {list(features_df.columns)}\")\n",
+    "\n",
+    "# Select features for modeling\n",
+    "feature_columns = [\n",
+    "    'message_frequency', 'avg_msg_length', 'std_msg_length', 'total_msg_length',\n",
+    "    'avg_subject_words', 'total_subject_words', 'avg_body_words', 'total_body_words',\n",
+    "    'weekend_proportion', 'domain_encoded', 'month'\n",
+    "]\n",
+    "\n",
+    "X = features_df[feature_columns]\n",
+    "y = features_df['monthly_score']\n",
+    "\n",
+    "print(f\"\\nFeature matrix shape: {X.shape}\")\n",
+    "print(f\"Target variable shape: {y.shape}\")\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Train Linear Regression model\n",
+    "lr_model = LinearRegression()\n",
+    "lr_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_train_pred = lr_model.predict(X_train_scaled)\n",
+    "y_test_pred = lr_model.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_mse = mean_squared_error(y_train, y_train_pred)\n",
+    "test_mse = mean_squared_error(y_test, y_test_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "test_r2 = r2_score(y_test, y_test_pred)\n",
+    "train_mae = mean_absolute_error(y_train, y_train_pred)\n",
+    "test_mae = mean_absolute_error(y_test, y_test_pred)\n",
+    "\n",
+    "print(f\"\\n=== MODEL PERFORMANCE ===\")\n",
+    "print(f\"Training Set:\")\n",
+    "print(f\"- MSE: {train_mse:.4f}\")\n",
+    "print(f\"- MAE: {train_mae:.4f}\")\n",
+    "print(f\"- R²: {train_r2:.4f}\")\n",
+    "\n",
+    "print(f\"\\nTesting Set:\")\n",
+    "print(f\"- MSE: {test_mse:.4f}\")\n",
+    "print(f\"- MAE: {test_mae:.4f}\")\n",
+    "print(f\"- R²: {test_r2:.4f}\")\n",
+    "\n",
+    "# Feature importance analysis\n",
+    "feature_importance = pd.DataFrame({\n",
+    "    'feature': feature_columns,\n",
+    "    'coefficient': lr_model.coef_,\n",
+    "    'abs_coefficient': np.abs(lr_model.coef_)\n",
+    "}).sort_values('abs_coefficient', ascending=False)\n",
+    "\n",
+    "print(f\"\\n=== FEATURE IMPORTANCE ===\")\n",
+    "print(feature_importance)\n",
+    "\n",
+    "# Visualizations\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "\n",
+    "# 1. Actual vs Predicted (Test Set)\n",
+    "axes[0,0].scatter(y_test, y_test_pred, alpha=0.6)\n",
+    "axes[0,0].plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--', lw=2)\n",
+    "axes[0,0].set_xlabel('Actual Monthly Score')\n",
+    "axes[0,0].set_ylabel('Predicted Monthly Score')\n",
+    "axes[0,0].set_title(f'Actual vs Predicted (Test Set)\\nR² = {test_r2:.3f}')\n",
+    "\n",
+    "# 2. Residuals plot\n",
+    "residuals = y_test - y_test_pred\n",
+    "axes[0,1].scatter(y_test_pred, residuals, alpha=0.6)\n",
+    "axes[0,1].axhline(y=0, color='r', linestyle='--')\n",
+    "axes[0,1].set_xlabel('Predicted Monthly Score')\n",
+    "axes[0,1].set_ylabel('Residuals')\n",
+    "axes[0,1].set_title('Residuals Plot')\n",
+    "\n",
+    "# 3. Feature importance\n",
+    "top_features = feature_importance.head(8)\n",
+    "axes[1,0].barh(top_features['feature'], top_features['abs_coefficient'])\n",
+    "axes[1,0].set_xlabel('Absolute Coefficient Value')\n",
+    "axes[1,0].set_title('Feature Importance (Top 8)')\n",
+    "\n",
+    "# 4. Distribution of predictions vs actual\n",
+    "axes[1,1].hist(y_test, bins=20, alpha=0.5, label='Actual', density=True)\n",
+    "axes[1,1].hist(y_test_pred, bins=20, alpha=0.5, label='Predicted', density=True)\n",
+    "axes[1,1].set_xlabel('Monthly Score')\n",
+    "axes[1,1].set_ylabel('Density')\n",
+    "axes[1,1].set_title('Distribution: Actual vs Predicted')\n",
+    "axes[1,1].legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('../visualizations/predictive_model_results.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "# Save model results\n",
+    "model_results = {\n",
+    "    'model_type': 'Linear Regression',\n",
+    "    'train_r2': train_r2,\n",
+    "    'test_r2': test_r2,\n",
+    "    'train_mse': train_mse,\n",
+    "    'test_mse': test_mse,\n",
+    "    'train_mae': train_mae,\n",
+    "    'test_mae': test_mae,\n",
+    "    'feature_count': len(feature_columns),\n",
+    "    'training_samples': len(X_train),\n",
+    "    'testing_samples': len(X_test)\n",
+    "}\n",
+    "\n",
+    "pd.DataFrame([model_results]).to_csv('../data/processed/model_performance.csv', index=False)\n",
+    "feature_importance.to_csv('../data/processed/feature_importance.csv', index=False)\n",
+    "\n",
+    "print(f\"\\n\" + \"=\"*60)\n",
+    "print(\"TASK 6: PREDICTIVE MODELING - SUMMARY REPORT\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Model successfully trained and evaluated!\")\n",
+    "print(f\"Test R² Score: {test_r2:.3f} ({'Good' if test_r2 > 0.7 else 'Moderate' if test_r2 > 0.5 else 'Poor'} fit)\")\n",
+    "print(f\"Most important features:\")\n",
+    "for i, row in feature_importance.head(3).iterrows():\n",
+    "    print(f\"  {i+1}. {row['feature']}: {row['coefficient']:.4f}\")\n",
+    "\n",
+    "print(f\"\\nOutput files:\")\n",
+    "print(f\"- Model performance: ../data/processed/model_performance.csv\")\n",
+    "print(f\"- Feature importance: ../data/processed/feature_importance.csv\")\n",
+    "print(f\"- Visualizations: ../visualizations/predictive_model_results.png\")\n",
+    "\n",
+    "print(f\"\\n\" + \"=\"*60)\n",
+    "print(\"ALL TASKS COMPLETED SUCCESSFULLY!\")\n",
+    "print(\"Review notebooks 01-07 for complete analysis\")\n",
+    "print(\"=\"*60)"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
